Add advanced features to transportation module: ride tracking, analytics dashboard, and admin layout

--- a/app/views/transportation/index.html.erb
+++ b/app/views/transportation/index.html.erb
@@ -63,6 +63,15 @@
           </svg>
           <span>Local Rides</span>
         <% end %>
+
+        <% if current_user&.admin? %>
+          <%= link_to transportation_analytics_path, class: "py-4 px-6 text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 border-b-2 border-transparent hover:border-gray-300 dark:hover:border-gray-700 font-medium flex items-center space-x-2" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M2 11a1 1 0 011-1h2a1 1 0 011 1v5a1 1 0 01-1 1H3a1 1 0 01-1-1v-5zM8 7a1 1 0 011-1h2a1 1 0 011 1v9a1 1 0 01-1 1H9a1 1 0 01-1-1V7zM14 4a1 1 0 011-1h2a1 1 0 011 1v12a1 1 0 01-1 1h-2a1 1 0 01-1-1V4z" />
+            </svg>
+            <span>Analytics</span>
+          <% end %>
+        <% end %>
         <%= link_to transportation_tickets_path, class: "py-4 px-6 text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 border-b-2 border-transparent hover:border-gray-300 dark:hover:border-gray-700 font-medium flex items-center space-x-2" do %>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
             <path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z" />
